# Connectome_Capstone_NoMPI

./: CMakeLists.txt  main.cpp
